[project]
name = "piphi-network-433mhz"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "PiPhi Network" },
    {name = "KelvinSan", email = "kelvin.sanyaolu@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.116.1",
    "piphi-runtime-kit-python[fastapi,mqtt]==0.3.1",
    "pytest>=8.3,<9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "piphi-runtime-testkit-python @ file:///${PROJECT_ROOT}/../piphi-runtime-testkit-python",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn piphi_network_433mhz.app:app --host 0.0.0.0 --port 8090 --reload"
test = "pytest"
